src/objects/sfsp__SalesNodeRuleItem__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>==</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>doesnotcontain</fullName>
                </value>
                <value>
                    <fullName>startsWith</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__SalesNodeRule__c</fullName>
        <label>Sales Node Rule</label>
        <referenceTo>sfsp__SalesNodeRule__c</referenceTo>
        <relationshipLabel>Sales Node Rule Items</relationshipLabel>
        <relationshipName>SalesNodeRuleItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfsp__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales Node Rule Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Rule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>